<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form_add_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.mercubuana.todoapp.ToDoAddUpdateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atur_alarm"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_once_date"
                style="@style/Base.Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range_black" />
            <TextView
                android:id="@+id/tv_once_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_date" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_once_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_black" />
            <TextView
                android:id="@+id/tv_once_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_time" />
        </LinearLayout>
    </LinearLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp">-->

<!--    <EditText-->
<!--        android:id="@+id/editTextDate"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/tanggal"-->
<!--        android:ems="10"-->
<!--        android:maxLines="1"-->
<!--        android:inputType="date" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp">-->

<!--        <EditText-->
<!--            android:id="@+id/editTextTime"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/waktu"-->
<!--            android:ems="10"-->
<!--            android:maxLines="1"-->
<!--            android:inputType="time" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/btn_submit"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>